--- a/src/assets/less/elements/flipBtns.less
+++ b/src/assets/less/elements/flipBtns.less
@@ -1,5 +1,8 @@
 /** flipBtns.less */
 
+// block
+// =====
+
 .flipBtns {
     .mixin-userSelectNone;
     max-height: 1px;
@@ -9,6 +12,9 @@
     height: 100%;
     z-index: 20;
 }
+
+// elements
+// ========
 
 .flipBtns__btnPrev,
 .flipBtns__btnNext {
@@ -62,6 +68,7 @@
 }
 
 // modifiers
+// =========
 
 &.flipBtns--inset {
 
