--- a/src/assets/less/elements/flyout.less
+++ b/src/assets/less/elements/flyout.less
@@ -16,12 +16,6 @@
     width: 30rem;
 }
 
-// hide if JS is disabled
-
-// .noJs .flyout {
-//     display: none;
-// }
-
 // elements
 // ========
 
@@ -58,7 +52,7 @@
 
 }
 
-// hide handly if js is disabled
+// hide handle if js is disabled
 
 .noJs .flyout__handle {
     display: none;
