--- a/src/assets/less/elements/modal.less
+++ b/src/assets/less/elements/modal.less
@@ -1,5 +1,8 @@
 /** modal.less */
 
+// block
+// =====
+
 .modal {
     .mixin-defaultBorderRadius;
     .mixin-shadow-4;
@@ -11,6 +14,9 @@
     top: 1rem;
     width: 66rem;
 }
+
+// elements
+// ========
 
 .modal__header {
 
@@ -70,6 +76,7 @@
 }
 
 // modifiers
+// =========
 
 .modal--small {
     width: 40rem;
