--- a/src/assets/less/elements/note.less
+++ b/src/assets/less/elements/note.less
@@ -216,7 +216,7 @@
 
 }
 
-// full width notes
+// full-width notes
 
 /*
     In order to correctly attach icons to full-width notes, we need an additial
