--- a/src/templates/pages/elements/switch.html
+++ b/src/templates/pages/elements/switch.html
@@ -12,4 +12,15 @@
     </div>
 </div>
 
+<div class="documentation__block">
+    <div class="documentation__example" data-printcode="language:markup; print:true;">
+        <p class="m-b-2">
+            <input type="checkbox" data-switch />
+        </p>
+        <p>
+            <input type="checkbox" data-switch />
+        </p>
+    </div>
+</div>
+
 {% endblock %}
