--- a/src/assets/less/elements/priceSticker.less
+++ b/src/assets/less/elements/priceSticker.less
@@ -1,5 +1,8 @@
 /** priceSticker.less */
 
+// block
+// =====
+
 .priceSticker {
     
     .mixin-defaultBorderRadius;
@@ -7,9 +10,9 @@
     box-shadow: 0 1px 0 rgba(0,0,0,.1);
     color: #fff;
     display: inline-block;
-    font-size: 30px;
-    line-height: 40px;
-    padding: 0 5px;
+    font-size: 3rem;
+    line-height: 4rem;
+    padding: 0 .5rem;
     position: relative;
     text-shadow: none;
     white-space: nowrap;
@@ -19,54 +22,53 @@
     &:before,
     &:after {
         background: @color-negative-15;
-        border-radius: 15px;
+        border-radius: 1.5rem;
         content: ' ';
         display: block;
         height: 70%;
         position: absolute;
         top: 15%;
         transform: scaleX(0.5);
-        width: 40px;
+        width: 4rem;
     }
 
     &:before {
-        left: -17px;
+        left: -1.7rem;
     }
 
     &:after {
-        right: -17px;
+        right: -1.7rem;
     }
 
-    // content
+}
 
-    span {
-        position: relative;
-        z-index: 2;
-    }
+// elements
+// =======
 
-    small {
-        display: block;
-        font-size: 15px;
-        line-height: 15px;
-        margin-bottom: 10px;
-        text-align: center;
-    }
-
+.priceSticker__content {
+    
+    display: block;
+    font-size: 1.5rem;
+    line-height: 1.5rem;
+    margin-bottom: 1rem;
+    text-align: center;
+    
     sup {
-        font-size: 10px;
-        line-height: 10px;
+        font-size: 1rem;
+        line-height: 1rem;
         position: relative;
-        top: -15px;
+        top: -1.5remx;
     }
 
-    // rotation
+}
 
-    &.rot-r {
-        transform: rotate(5deg);
-    }
+// modifiers
+// =========
 
-    &.rot-l {
-        transform: rotate(-5deg);
-    }
+.priceSticker--rot-r {
+    transform: rotate(5deg);
+}
 
+.priceSticker--rot-l {
+    transform: rotate(-5deg);
 }
