--- a/src/assets/less/elements/switch.less
+++ b/src/assets/less/elements/switch.less
@@ -6,18 +6,21 @@
 .js .switch {
 
     .mixin-clearAppearance;
-    border-radius: 10px;
+    .mixin-userSelectNone;
+    border-radius: 1rem;
     border: 0;
     cursor: pointer;
     display: inline-block;
-    height: 20px;
+    height: 2rem;
     overflow: hidden;
     position: relative;
     vertical-align: middle;
-    width: 60px;
+    width: 6rem;
 
     input {
+        position: absolute;
         visibility: hidden;
+        z-index: 1;
     }
 
 }
@@ -30,19 +33,20 @@
     border-radius: 50%;
     content: ' ';
     display: block;
-    height: 16px;
+    height: 1.6rem;
     overflow: hidden;
     position: absolute;
     text-indent: -999px;
-    top: 2px;
+    top: .2rem;
     transition: left 60ms ease-in;
-    width: 16px;
+    width: 1.6rem;
 }
 
 .switch__labelOn,
 .switch__labelOff {
+    .mixin-userSelectNone;
     display: block;
-    font: bold 11px/19px @font-sansserif;
+    font: bold 1.1rem/1.9rem @font-sansserif;
     position: absolute;
     text-transform: uppercase;
     top: 0;
@@ -50,12 +54,12 @@
 
 .switch__labelOn {
     color: @color-positive-25;
-    left: 8px;
+    left: .8rem;
 }
 
 .switch__labelOff {
     color: @color-main-25;
-    right: 8px;
+    right: .8rem;
 }
 
 // modifiers
@@ -67,7 +71,7 @@
 
     .switch__knob {
         background: @color-positive-21;
-        left: 42px;
+        left: 4.2rem;
     }
 
     &:hover .switch__knob {
@@ -88,7 +92,7 @@
     background: @color-main-16;
 
     .switch__knob {
-        left: 2px;
+        left: .2rem;
     }
 
     &:hover .switch__knob {
@@ -110,43 +114,43 @@
 
 .js .switch--large {
 
-    border-radius: 15px;
-    height: 30px;
-    width: 75px;
+    border-radius: 1.5rem;
+    height: 3rem;
+    width: 7.5rem;
 
     // knob
 
     .switch__knob {
-        height: 26px;
-        top: 2px;
-        width: 26px;
+        height: 2.6rem;
+        top: .2rem;
+        width: 2.6rem;
     }
 
     // labels
 
     .switch__labelOn,
     .switch__labelOff {
-        line-height: 30px
+        line-height: 3rem;
     }
 
     .switch__labelOn {
-        left: 12px;
+        left: 1.2rem;
     }
 
     .switch__labelOff {
-        right: 12px;
+        right: 1.2rem;
     }
 
     // on
 
     &.switch--on .switch__knob {
-        left: 47px;
+        left: 4.7rem;
     }
 
     // off
 
     &.switch--off .switch__knob {
-        left: 2px;
+        left: .2rem;
     }
 
     // focus
