--- a/src/templates/pages/elements/tooltip.html
+++ b/src/templates/pages/elements/tooltip.html
@@ -66,16 +66,16 @@ If JavaScript was disabled, the example above would look like this:
 
 {% markdown %}
 ### Inheritance
-A tooltip will inherit certain sematic class names from it’s target (`.attention`, `.error`, `.negative`, `.positive`, `.success`.). This is pretty much only useful to show tooltips in combination with `.hints` while showing input validation messages. Learn more about [form validation](/pages/elements/form_validation.html).
+A tooltip will inherit certain sematic class names from it’s target (`*--attention`, `*--error`, `*--negative`, `*--positive`, `*--success`.). This is pretty much only useful to show tooltips in combination with `.hints` while showing input validation messages.
 {% endmarkdown %}
 
 <div class="documentation__block">
     <div class="documentation__example" data-printcode="language:markup; print:true;">
         <form>
-            <div class="note m-b-2" id="hint-2">
+            <div class="note m-b-2 note--success" id="hint-2">
                 <h3 class="note__headline">Success!</h3>
                 <div class="note__body">
-                    <p>This is a tooltip which inherits the »success«-class from it’s referrer – in this case a text-input.</p>
+                    <p>This is a tooltip which inherits the *--success class from it’s target.</p>
                 </div>
             </div>
             <input class="input--large input--success w-30" type="text" data-tooltip="target:#hint-2; icon:011;" />
